# Qortek

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
adapters/qortek-adapter-memory/: Cargo.toml
adapters/qortek-adapter-memory/src/: lib.rs
adapters/qortek-adapter-memory/tests/: brain_store_contract.rs
adapters/qortek-adapter-qdrant/: Cargo.toml
adapters/qortek-adapter-qdrant/src/: lib.rs
adapters/qortek-adapter-surreal/: Cargo.toml
adapters/qortek-adapter-surreal/src/: lib.rs
crates/qortek-connectome/: Cargo.toml
crates/qortek-connectome/src/: lib.rs
crates/qortek-core/: Cargo.toml
crates/qortek-core/src/: lib.rs
crates/qortek-estate/: Cargo.toml
crates/qortek-estate/src/: lib.rs
crates/qortek-fork/: Cargo.toml
crates/qortek-fork/src/: lib.rs
crates/qortek-mesh/: Cargo.toml
crates/qortek-mesh/src/: lib.rs
crates/qortek-preflight/: Cargo.toml
crates/qortek-preflight/src/: lib.rs
crates/qortek-rrd/: Cargo.toml
crates/qortek-rrd/src/: lib.rs
crates/qortek-rro/: Cargo.toml
crates/qortek-rro/src/: lib.rs
crates/qortek-store/: Cargo.toml
crates/qortek-store/src/: lib.rs
crates/qortek-vector/: Cargo.toml
crates/qortek-vector/src/: lib.rs
docs/: ARCHITECTURE.md  BRAIN_STORE.md  CONNECTOME.md  DEDICATED_RECALL_SERVICE.md  FORK_DELIBERATE_COMMIT.md  MESH.md  PREFLIGHT.md  PRODUCT_FOUNDATION.md  PROTOCOL_STRATEGY.md  PUBLIC_BOUNDARY.md  QORTEX_ALIGNMENT.md  RELEASE_CHECKLIST.md  ROADMAP.md  ROLLOUT.md  RRO.md  TEST_MATRIX.md  TURNKEY.md  VERIFICATION.md
docs/session-replays/: 0001-public-scaffold.md  README.md
examples/basic-rro/: Cargo.toml
examples/basic-rro/src/: main.rs
examples/fork-foldback/: Cargo.toml
examples/fork-foldback/src/: main.rs
examples/replay-memory-moat/: Cargo.toml
examples/replay-memory-moat/src/: main.rs
