[package]
name = "qortek-connectome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
qortek-core.workspace = true
qortek-rro.workspace = true
qortek-store.workspace = true
qortek-vector.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
qortek-adapter-memory.workspace = true
tokio.workspace = true
