[package]
name = "qortek-estate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
qortek-core.workspace = true
qortek-mesh.workspace = true
serde.workspace = true
serde_json.workspace = true
