[package]
name = "replay-memory-moat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
qortek-adapter-memory.workspace = true
qortek-core.workspace = true
qortek-rro.workspace = true
qortek-store.workspace = true
serde_json.workspace = true
tokio.workspace = true
